--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                     </div>
                     <button type="submit" class="btn btn-primary login">Login</button>
                     <div class="login_SSO">
-                        <a href="#">or login with SSO</a>
+                        <a href="/pages/index2.html">or login with SSO</a>
                     </div>
                     <div class="help text-center d-none shadow-lg rounded mb-5 d-md-block position-absolute">
-                        <a href=""><img src=" assets/images/help.png" alt="">
+                        <a href=""><img src="../assets/images/help.png" alt="">
                         <p id="help_button" class="help_button text-white">Help</p></a> 
                     </div>
                 </form>
