--- a/index2.html
+++ b/index2.html
@@ -47,7 +47,7 @@
                         <label for="password" class="form-label">Password</label>
                         <img class="password-icon" src=" assets/images/Container.svg" alt="">
                         <input type="password" name="password" id="password" class="form-control" placeholder="Enter password">
-                        <a href="#" class="forget-text">Forget password?</a>
+                        <a href="/pages/index3.html" class="forget-text">Forget password?</a>
                     </div>
                     <button type="submit" class="btn btn-primary login mb-3">Login</button>
                     <a href="#" class="google_button btn btn-white position-relative">
