--- a/index3.html
+++ b/index3.html
@@ -52,7 +52,7 @@
                     
                     <button type="submit" class="btn btn-primary login">Verify</button>
                     <div class="login_SSO">
-                        <a href="#">Resend code or login</a>
+                        <a href="/pages/multi-step.html">Resend code or login</a>
                     </div>
                     <div class="help text-center d-none shadow-lg rounded mb-5 d-md-block position-absolute">
                         <a href=""><img src=" assets/images/help.png" alt="">
