--- a/index.html
+++ b/index.html
@@ -60,12 +60,11 @@
             </div>
         </div>
     </header>
-    <div class="img">
-        <img src="/assets/images/one.svg" class="b" alt="">
-        <img src="/assets/images/two.svg" class=" a position-absolute " alt="">
-    </div>
-    <main class="align-items-end justify-content-center">
-        <section>
+    <main class="align-items-end justify-content-center position-relative">
+        <div class="background-image">
+            <img src="/assets/images/two.svg" class="curve-vector" alt="">
+        </div>
+    <section>
             <div class="form-container">
                 <form action="">
                     <h1 class="text-center"><b>Welcome back !</b></h1>
@@ -103,7 +102,7 @@
                 <div class="no_account"><p>Don't have an account? <a href="#" class="text-white">Sign up</a></p></div>
                 <p class="footer">This site is protected by reCAPTCHA and the Google Privacy and Terms of Service apply.</p>
             </div>
-        </section>
+    </section>
     </main>
     <footer>
         <!-- place footer here -->
