--- a/index3.html
+++ b/index3.html
@@ -26,11 +26,11 @@
             </div>
         </div>
     </header>
-    <div class="background_image">
-        <img src=" assets/images/Background.png" class="img-fluid w-100 mb-0" alt="">
-    </div>
-    <main class="align-items-end justify-content-center">
-        <section>
+    <main class="align-items-end justify-content-center position-relative">
+        <div class="background-image">
+            <img src="/assets/images/two.svg" class="curve-vector" alt="">
+        </div>
+    <section>
             <div class="form-container">
                 <form action="">
                     <h3 class="text-center">Seconds to sign up!</h3>
