--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,8 @@
  
 </head>
 <body>
+
+
     <header class="login-header">
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center">
@@ -24,11 +26,11 @@
             </div>
         </div>
     </header>
-    <div class="background_image">
-        <img src=" assets/images/Background.png" class="img-fluid w-100 mb-0" alt="">
-    </div>
-    <main class="align-items-end justify-content-center">
-        <section>
+    <main class="align-items-end justify-content-center position-relative">
+        <div class="background-image">
+            <img src="/assets/images/two.svg" class="curve-vector" alt="">
+        </div>
+    <section>
             <div class="form-container">
                 <form action="">
                     <h1 class="text-center fs-3"><b>Seconds to sign up!</b></h1>
