--- a/index3.html
+++ b/index3.html
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center">
                 <div >
-                    <img src=" assets/images/Link.png" alt="Logo" class="img-fluid">
+                    <img src=" assets/images/logo.png" alt="Logo" class="img-fluid ">
                     <p class="mb-0 me-2 btn-2">The everything app for work</p>
                 </div>
                 <div class="nav-btn  text-end d-flex justify-content-center justify-content-md-end align-items-center mt-3 mt-md-0">
@@ -28,7 +28,7 @@
     </header>
     <main class="align-items-end justify-content-center position-relative">
         <div class="background-image">
-            <img src="/assets/images/two.svg" class="curve-vector" alt="">
+            <img src="./assets/images/two.svg" class="curve-vector" alt="">
         </div>
     <section>
             <div class="form-container">
@@ -50,21 +50,18 @@
                       <input type="text"><hr>
                     </div>
                     
-                    <button type="submit" class="btn btn-primary login">Verify</button>
+                    <button type="submit" class="btn btn login">Verify</button>
                     <div class="login_SSO">
                         <a href="/pages/multi-step.html">Resend code or login</a>
                     </div>
                     <div class="help text-center d-none shadow-lg rounded mb-5 d-md-block position-absolute">
-                        <a href=""><img src=" assets/images/help.png" alt="">
+                        <a href=""><img src=" ./assets/images/help.png" alt="">
                         <p id="help_button" class="help_button text-white">Help</p></a> 
                     </div>
                 </form>
 
             </div>
-            <div class="footer_end">
-                <div class="no_account"><p>Don't have an account? <a href="#" class="text-white">Sign up</a></p></div>
-                <p class="footer">This site is protected by reCAPTCHA and the Google Privacy and Terms of Service apply.</p>
-            </div>
+      
         </section>
     </main>
     <footer>
