--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             <div class="d-flex justify-content-between align-items-center">
                 <div >
-                    <img src=" assets/images/Link.png" alt="Logo" class="img-fluid">
+                    <img src=" assets/images/logo.png" alt="Logo" class="img-fluid ">
                     <p class="mb-0 me-2 btn-2">The everything app for work</p>
                 </div>
                 <div class="nav-btn  text-end d-flex justify-content-center justify-content-md-end align-items-center mt-3 mt-md-0">
@@ -28,7 +28,7 @@
     </header>
     <main class="align-items-end justify-content-center position-relative">
         <div class="background-image">
-            <img src="/assets/images/two.svg" class="curve-vector" alt="">
+            <img src="./assets/images/two.svg" class="curve-vector" alt="">
         </div>
     <section>
             <div class="form-container">
@@ -51,7 +51,7 @@
                         <input type="password" name="password" id="password" class="form-control" placeholder="Enter password">
                         <a href="/pages/index3.html" class="forget-text">Forget password?</a>
                     </div>
-                    <button type="submit" class="btn btn-primary login mb-3">Login</button>
+                    <button type="submit" class="btn btn login mb-3">Login</button>
                     <a href="#" class="google_button btn btn-white position-relative">
                         <img src=" assets/images/google.jpg" alt="" width="26"> Continue with Google
                     </a>
@@ -63,7 +63,7 @@
                             .</a>
                     </div>
                     <div class="help text-center d-none shadow-lg rounded mb-5 d-md-block position-absolute">
-                        <a href=""><img src=" assets/images/help.png" alt="">
+                        <a href=""><img src=" ./assets/images/help.png" alt="">
                         <p id="help_button" class="help_button text-white">Help</p></a> 
                     </div>
                    
