--- a/multi-step.html
+++ b/multi-step.html
@@ -358,7 +358,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark text-white">
             <div class="container-fluid">
                 <a class="navbar-brand" href="javascript:void(0)">
-                    <img src=" assets/images/logo.png" alt="" />
+                    <img src=" assets/images/logo.png" alt="" width="80px"/>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                     <span class="navbar-toggler-icon"></span>
