--- a/index3.html
+++ b/index3.html
@@ -21,12 +21,11 @@
                     <p class="mb-0 me-2">Already playing with ClickUp?
 
                     </p>
-                    <a href="#" class="btn">login</a>
                 </div>
             </div>
         </div>
     </header>
-    <main class="align-items-end justify-content-center position-relative">
+    <main class="justify-content-center position-relative pt-5">
         <div class="background-image">
             <img src="./assets/images/two.svg" class="curve-vector" alt="">
         </div>
@@ -63,10 +62,11 @@
             </div>
       
         </section>
+        <footer>
+            <!-- place footer here -->
+        </footer>
     </main>
-    <footer>
-        <!-- place footer here -->
-    </footer>
+   
   
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" ></script>
