--- a/index3.html
+++ b/index3.html
@@ -25,7 +25,7 @@
             </div>
         </div>
     </header>
-    <main class="justify-content-center position-relative pt-5">
+    <main class="justify-content-center">
         <div class="background-image">
             <img src="./assets/images/two.svg" class="curve-vector" alt="">
         </div>
