--- a/index.html
+++ b/index.html
@@ -40,19 +40,16 @@
         height: 50%;
         position: fixed;
       }
-      .main-navabar{
+      .main-navabar {
         justify-content: space-between;
       }
       #sign_up {
         text-align: center !important;
-    width: 128px !important;
-   
+        width: 128px !important;
       }
     </style>
     <header class="login-header">
-      <div
-        class="container-fluid d-flex main-navabar"
-      >
+      <div class="container-fluid d-flex main-navabar">
         <div>
           <img src=" assets/images/logo.png" alt="Logo" class="img-fluid" />
           <p class="mb-0 me-2 btn-2">The everything app for work</p>
