--- a/index2.html
+++ b/index2.html
@@ -1,169 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Responsive Form</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href=" assets/css/index2.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
-    <style>
-      #sign_up {
-        text-align: center !important;
-        height: 40px;
-        width: 111px;
-      }
 
-      @media only screen and (max-width: 600px) {
-        .footer_end {
-          margin: 5% 7% !important;
-        }
-      }
-      .main_navabar {
-        justify-content: space-between;
-      }
-    </style>
+<head>
+  <title>Responsive Form</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href=" assets/css/index2.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
-    <header class="login-header">
-      <div class="container-fluid">
-        <div class="d-flex main_navabar">
+<body>
+  <style>
+    .img {
+      margin-top: 10%;
+    }
+
+    .a {
+      position: relative;
+      position: absolute;
+      height: 50%;
+      width: 100%;
+    }
+
+    .b {
+      width: 100%;
+      height: 50%;
+      position: fixed;
+    }
+
+    .main-navabar {
+      justify-content: space-between;
+    }
+
+    #sign_up {
+      text-align: center !important;
+      width: 128px !important;
+    }
+    .form-container{
+      height: 511px !important;
+    }
+  </style>
+  <header class="login-header">
+    <div class="container-fluid d-flex main-navabar">
+      <div>
+        <img src=" assets/images/logo.png" alt="Logo" class="img-fluid" />
+        <p class="mb-0 me-2 btn-2">The everything app for work</p>
+      </div>
+      <div
+        class="nav-btn text-end d-flex justify-content-center justify-content-md-end align-items-center mt-3 mt-md-0">
+        <p class="mb-0 me-2">Don't have an account?</p>
+        <a href="#" id="sign_up" class="btn">Sign up</a>
+      </div>
+    </div>
+  </header>
+  <main class="background-image d-flex justify-content-center">
+    <img src="./assets/images/two.svg" class="curve-vector" alt="" />
+    <section class="form-container">
+      <form action="">
+        <h3 class="text-center"><b>Seconds to sign up!</b></h3>
+
+ 
+        <div class="mb-3 position-relative">
+          <label for="email" class="form-label">Full Name</label>
+          <img class="mail-icon" src=" assets/images/user.svg" alt="" />
+          <input type="email" name="email" id="email" class="form-control" placeholder="John Dae" />
+        </div>
+        <div class="mb-3 position-relative">
+          <label for="email" class="form-label">Work Email</label>
+          <img class="mail-icon" src=" assets/images/svg-sprite-global__cf-email.svg" alt="" />
+          <input type="email" name="email" id="email" class="form-control" placeholder="Enter your work email" />
+        </div>
+        <div class="mb-3 position-relative">
+          <label for="password" class="form-label">Password</label>
+          <img class="password-icon" src=" assets/images/Container.svg" alt="" />
+          <input type="password" name="password" id="password" class="form-control" placeholder="Enter password" />
+          <a href="#" class="forget-text">Forget password?</a>
+        </div>
+        <button type="submit" class="btn btn login">Login</button>
+        <a href="#" class="google_button btn btn-white position-relative mt-3">
+          <img src=" assets/images/google.jpg" alt="" width="26" />
+          Continue with Google
+        </a>
+        <div class="login_SSO">
+          <a href="/pages/index2.html">By clicking the button above, you agree to our Terms of Service and Privacy
+            Policy .</a>
+        </div>
+        <div class="help text-center d-none shadow-lg rounded mb-5 d-md-block position-absolute">
+          <a href=""><img src="./assets/images/help.png" alt="" />
+            <p id="help_button" class="help_button text-white">Help</p>
+          </a>
+        </div>
+      </form>
+    </section>
+    <footer class="footer_end">
+
+
+
+
+    
+<style>
+  .footer_images{
+    gap: 10px;
+  }
+</style>
+
+
+
+
+      <div class="no_account">
+        <div class=" d-flex footer_images">
           <div>
-            <img src=" assets/images/logo.png" alt="Logo" class="img-fluid" />
-            <p class="mb-0 me-2 btn-2">The everything app for work</p>
+            <img src=" assets/images/samsung.png" width="90px" alt="" />
           </div>
-          <div class="nav-btn d-flex">
-            <p class="mb-0 me-2">Don't have an account?</p>
-            <a href="#" id="sign_up" class="btn mx-2 my-2">Sign up</a>
+          <div>
+            <img src=" assets/images/bookin.png" width="90px" alt="" />
+          </div>
+          <div >
+            <img src=" assets/images/ibm.png"width="45px" alt="" />
+          </div>
+          <div >
+            <img src=" assets/images/paders.png" width="45px" alt="" />
           </div>
         </div>
+
       </div>
-    </header>
-    <main class="justify-content-center">
-      <div class="background-image">
-        <img src="./assets/images/two.svg" class="curve-vector" alt="" />
-      </div>
-      <section>
-        <div class="form-container">
-          <form action="">
-            <h1 class="text-center fs-3"><b>Seconds to sign up!</b></h1>
+      <p class="footer mt-3">
+        See why 2,000,000+ teams are more productive with ClickUp
+      </p>
+      <!-- place footer here -->
+    </footer>
+  </main>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+</body>
 
-            <div class="mb-3 position-relative">
-              <label for="email" class="form-label">Full Name</label>
-              <img class="mail-icon" src=" assets/images/user.svg" alt="" />
-              <input
-                type="email"
-                name="email"
-                id="email"
-                class="form-control"
-                placeholder="John Dae"
-              />
-            </div>
-            <div class="mb-3 position-relative">
-              <label for="email" class="form-label">Work Email</label>
-              <img
-                class="mail-icon"
-                src=" assets/images/svg-sprite-global__cf-email.svg"
-                alt=""
-              />
-              <input
-                type="email"
-                name="email"
-                id="email"
-                class="form-control"
-                placeholder="Enter your work email"
-              />
-            </div>
-            <div class="mb-3 position-relative">
-              <label for="password" class="form-label">Password</label>
-              <img
-                class="password-icon"
-                src=" assets/images/Container.svg"
-                alt=""
-              />
-              <input
-                type="password"
-                name="password"
-                id="password"
-                class="form-control"
-                placeholder="Enter password"
-              />
-              <a href="/pages/index3.html" class="forget-text"
-                >Forget password?</a
-              >
-            </div>
-            <button type="submit" class="btn btn login mb-3">Login</button>
-            <a href="#" class="google_button btn btn-white position-relative">
-              <img src=" assets/images/google.jpg" alt="" width="26" /> Continue
-              with Google
-            </a>
-            <div class="login_SSO">
-              <a href="#" class="text-dark"
-                >By clicking the button above, you agree to our Terms of Service
-                and Privacy Policy .</a
-              >
-            </div>
-            <div
-              class="help text-center d-none shadow-lg rounded mb-5 d-md-block position-absolute"
-            >
-              <a href=""
-                ><img src=" ./assets/images/help.png" alt="" />
-                <p id="help_button" class="help_button text-white">Help</p></a
-              >
-            </div>
-          </form>
-        </div>
-
-        <footer class="footer_end text-white text-center">
-          <!-- place footer here -->
-          <div class="comp_images d-flex flex-row justify-content-center m-10">
-            <div class="a">
-              <img src=" assets/images/samsung.png" width="90px" alt="" />
-            </div>
-            <div class="b">
-              <img
-                src=" assets/images/bookin.png"
-                class="b"
-                width="90px"
-                alt=""
-              />
-            </div>
-            <div class="c">
-              <img src=" assets/images/ibm.png" class="c" width="45px" alt="" />
-            </div>
-            <div class="d">
-              <img
-                src=" assets/images/paders.png"
-                class="d"
-                width="45px"
-                alt=""
-              />
-            </div>
-          </div>
-          <p class="footer mt-3">
-            See why 2,000,000+ teams are more productive with ClickUp
-          </p>
-        </footer>
-      </section>
-    </main>
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  </body>
 </html>
