--- a/home.html
+++ b/home.html
@@ -111,7 +111,7 @@
                                 .h_main_profile{
                                     position: absolute;
     right: 0;
-    left: 60vh;
+    left: 60vh
                                 }
                             </style>
 
