--- a/home.html
+++ b/home.html
@@ -110,8 +110,8 @@
                                 alt=""><span>Ask AI</span></button>
 
                     </form>
-                    <div class="d-flex h_nav_end mt-3">
-                        <ul class="navbar-end_button me-auto">
+                    <div class="d-flex h_nav_end">
+                        <ul class="navbar-end_button mb-0">
 
 
 
@@ -160,7 +160,7 @@
                 <div class="dropdown">
                     <button class=" dropdown-toggle border-0 bg-transparent p-1 d-flex align-items-center gap-2"
                         type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="/assets/images/n.png" alt="">
+                        <img src="/assets/images/user_profile.svg" alt="">
                         <span class="person-name hide-text">Ning Lam's W…</span>
                     </button>
                     <ul class="dropdown-menu">
@@ -244,9 +244,9 @@
 
                     </div>
                 </div>
-                <div class="nav_2_two">
-                    <button class="btn_mang" type="button" class="btn btn_gray_button" data-bs-toggle="modal"
-                        data-bs-target="#exampleModal">Manage cards</button>
+                <div class="nav_2_two d-flex">
+                    <button class="btn btn_gray_button fs-6" type="button" class="btn btn_gray_button" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">Manage cards </button>
                     <button class="btn btn_white_button dropdown-toggle btn_setting" type="button"
                         id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                         <img src="./assets/images/home/setting.svg" alt="">
@@ -279,7 +279,7 @@
 
             </div>
             <div class="container-fluid">
-                <h1>Abubakar</h1>
+                <h3>Good afternoon, Abubakar</h3>
 
                 <div class="row">
                     <!-- First Column -->
@@ -1690,33 +1690,7 @@
                         <div class="tab-pane fade" id="nav-calendar" role="tabpanel" aria-labelledby="nav-calendar-tab">
                             
 
-                            <style>
-   
-                                .calendar {
-                                  border: 1px solid #ccc;
-                                  border-radius: 5px;
-                                  padding: 10px;
-                                }
-                                .calendar table {
-                                  width: 100%;
-                                  border-collapse: collapse;
-                                }
-                                .calendar th, .calendar td {
-                                  text-align: center;
-                                  border: 1px solid #ccc;
-                                  padding: 5px;
-                                }
-                                .calendar th {
-                                  background-color: #f0f0f0;
-                                }
-                                .calendar .today {
-                                  background-color: #f5f5f5;
-                                }
-                                .calendar .event {
-                                  background-color: #f0f0ff;
-                                  cursor: pointer;
-                                }
-                              </style>
+                         
   <div class="container">
     <div class="card">
       <div class="card-body">
