--- a/home.html
+++ b/home.html
@@ -261,7 +261,7 @@
 
             </div>
             <div class="container-fluid">
-                <h3>Good afternoon, Abubakar</h3>
+                <h3 class="user_name">Good afternoon, Abubakar</h3>
 
                 <div class="row">
                     <!-- First Column -->
@@ -371,7 +371,7 @@
                         <div class="box_two">
                             <div class="edit_two d-flex">
                                 <img src="./assets/images/dot.svg" alt="">
-                                <h5 class="mt-2">Agenda</h5>
+                                <h5 class="mt-2">My work</h5>
                             </div>
                             <div class="other_two">
                                 <img src="./assets/images/home/setting.svg" alt="">
@@ -503,7 +503,7 @@
                                     <div class="row mt-3 Personal_list_content">
                                         <img class="personal_list" src="./assets/images/home/personal_list.svg" alt="">
                                         <p>Personal List is a home for your tasks. <a href=""> Learn more</a></p>
-                                        <button class="btn_black_button">+ Create a task</button>
+                                        <button class="home_crad_button">+ Create a task</button>
                                     </div>
 
                                 </div>
@@ -541,7 +541,7 @@
                                     <div class="row mt-3 Personal_list_content">
                                         <img class="check_box_img" src="./assets/images/home/check_box_img.svg" alt="">
                                         <p>Tasks assigned to you will appear here. <a href=""> Learn more</a></p>
-                                        <button class="btn_black_button">+ Add task</button>
+                                        <button class="home_crad_button">+ Add task</button>
                                     </div>
 
                                 </div>
@@ -1708,7 +1708,6 @@
                         <div class="tab-pane fade" id="nav-assigned" role="tabpanel" aria-labelledby="nav-assigned-tab">
                             heello</div>
                         <div class="tab-pane fade" id="nav-calendar" role="tabpanel" aria-labelledby="nav-calendar-tab">
-<<<<<<< HEAD
                             
 <style>
     .calendar{
@@ -1765,36 +1764,6 @@
 <div>
     <p>All day</p>
 </div>
-=======
-
-                            <style>
-                                .calendar {
-                                    gap: 20px;
-                                }
-
-                                .calendar_time {
-                                    height: 546px;
-                                    overflow-y: scroll;
-                                }
-                            </style>
-
-                            <div class="calendar d-flex justify-content-between border-0">
-                                <div>
-                                    <p>
-                                        <span> Jul 12,Friday </span>
-                                        <img src="./assets/images/home/lessden.svg" alt="">
-                                        <img src="./assets/images/home/greaterden.svg" alt="">
-                                    </p>
-                                </div>
-                                <div>
-                                    <span> Today </span>
-                                    <span class="mx-2"><img src="./assets/images/home/today.svg" alt="">0
-                                        Calendars</span>
-                                    <img src="./assets/images/home/setting.svg" alt="">
-                                </div>
-
-                            </div>
->>>>>>> 7b273c58c778399a220d286f994066922db92c94
 
 
 
@@ -1803,7 +1772,6 @@
 <div class="calendar_time">
 
 
-<<<<<<< HEAD
 <div class="d-flex">
     <div class="my-3">
         12am
@@ -1827,85 +1795,6 @@
     </div>
 </div>
 </div>
-=======
-                            <table class="table table-hover">
-
-
-                                <tr>
-                                    <th>1</th>
-                                </tr>
-
-                                <th>2</th>
-                                </tr>
-                                <tr>
-                                    <th>3</th>
-                                </tr>
-                                <tr>
-                                    <th>1</th>
-                                </tr>
-
-                                <th>2</th>
-                                </tr>
-                                <tr>
-                                    <th>3</th>
-                                </tr>
-                                <tr>
-                                    <th>1</th>
-                                </tr>
-
-                                <th>2</th>
-                                </tr>
-                                <tr>
-                                    <th>3</th>
-                                </tr>
-                                <tr>
-                                    <th>1</th>
-                                </tr>
-
-                                <th>2</th>
-                                </tr>
-                                <tr>
-                                    <th>3</th>
-                                </tr>
-                                <tr>
-                                    <th>1</th>
-                                </tr>
-
-                                <th>2</th>
-                                </tr>
-                                <tr>
-                                    <th>3</th>
-                                </tr>
-                                <tr>
-                                    <th>1</th>
-                                </tr>
-
-                                <th>2</th>
-                                </tr>
-                                <tr>
-                                    <th>3</th>
-                                </tr>
-                                <tr>
-                                    <th>1</th>
-                                </tr>
-
-                                <th>2</th>
-                                </tr>
-                                <tr>
-                                    <th>3</th>
-                                </tr>
-                                <tr>
-                                    <th>1</th>
-                                </tr>
-
-                                <th>2</th>
-                                </tr>
-                                <tr>
-                                    <th>3</th>
-                                </tr>
-
-                            </table>
->>>>>>> 7b273c58c778399a220d286f994066922db92c94
 
 <div class="d-flex">
     <div class="my-3">
@@ -1919,7 +1808,6 @@
 </div>
 </div>
 
-<<<<<<< HEAD
 <style>
    
     .active_calender_button{
@@ -2177,98 +2065,6 @@
     </div>
 </div>
 </div>
-=======
-
-
-
-
-                            <div class="calendar_time d-flex">
-                                <div>
-                                    <div class="my-5 d-flex">
-                                        <div>
-                                            <p>12am</p>
-                                        </div>
-                                        <div>
-                                            <hr>
-                                        </div>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>1am</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>2am</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>3am</p>
-                                    </div>
-                                    <div class="my-5 ">
-                                        <p>4am</p>
-                                        <div class="calender_line"></div>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>5am</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>6am</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>7am</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>8am</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>9am</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>10am</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>11am</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>12pm</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>1pm</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>2pm</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>3pm</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>4pm</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>5pm</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>6pm</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>7pm</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>8pm</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>9pm</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>10pm</p>
-                                    </div>
-                                    <div class="my-5">
-                                        <p>11pm</p>
-                                    </div>
-                                </div>
-
-
-
-                            </div>
-
->>>>>>> 7b273c58c778399a220d286f994066922db92c94
 
                         </div>
                     </div>
