--- a/home.html
+++ b/home.html
@@ -261,8 +261,8 @@
                     </div>
                 </div>
                 <div class="nav_2_two d-flex">
-                    <button class="btn fs-6 primary" type="button" class="btn primary"
-                        data-bs-toggle="modal" data-bs-target="#exampleModal">Manage cards </button>
+                    <button class="btn  primary one_button_manage" type="button" class="btn primary 
+                        data-bs-toggle="modal" data-bs-target="#exampleModal"><span>Manage cards </span> </button>
                     <button class="btn btn_white_button dropdown-toggle btn_setting" type="button"
                         id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                         <img src="./assets/images/home/setting.svg" alt="">
