--- a/home.html
+++ b/home.html
@@ -261,7 +261,7 @@
                     </div>
                 </div>
                 <div class="nav_2_two d-flex">
-                    <button class="btn  primary one_button_manage" type="button" class="btn primary 
+                    <button class="btn home_crad_button" type="button" 
                         data-bs-toggle="modal" data-bs-target="#exampleModal"><span>Manage cards </span> </button>
                     <button class="btn btn_white_button dropdown-toggle btn_setting" type="button"
                         id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -656,7 +656,7 @@
 
                                         <p>LineUp keeps your most important tasks in one list. Add your most
                                             important task to get started <a href=""> Learn more</a></p>
-                                        <button class="btn_black_button">+ Add task</button>
+                                        <button class="home_crad_button">+ Add task</button>
                                     </div>
 
                                 </div>
