--- a/home.html
+++ b/home.html
@@ -90,8 +90,8 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="mynavbar">
-                    <form class="d-flex mx-auto gap-2">
-                        <button class="search-button">
+                    <form class="d-flex mx-auto gap-2 nav_search_form">
+                        <button class="search-button ">
                             <i class="bi bi-search"></i>
                             <span>Search...</span>
                         </button>
@@ -130,7 +130,7 @@
                     </form>
                     <div class="d-flex h_nav_end">
                         <ul class="navbar-end_button mb-0">
-                            <button class="mx-2 text-white" data-bs-toggle="modal" data-bs-target="#exampleModal2"><img
+                            <button class="mx-2 " data-bs-toggle="modal" data-bs-target="#exampleModal2"><img
                                     src="assets/images/add.png" alt=""><span> New </span></button>
                             <button class="mx-2" type="button" data-bs-toggle="offcanvas"
                                 data-bs-target="#offcanvasScrolling4" aria-controls="offcanvasScrolling"><img
@@ -944,7 +944,7 @@
                                     aria-labelledby="Task-tab">
                                     <div class=" d-flex">
                                         <div class="dropdown">
-                                            <button class="btn btn_yellow_outline dropdown-toggle h_drp_button mx-2"
+                                            <button class="btn dropdown-toggle h_drp_button mx-2"
                                                 type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
                                                 aria-expanded="false">
                                                 <img src="./assets/images/menu_list.svg" alt="">
@@ -984,23 +984,23 @@
                                             aria-describedby="inputGroup-sizing-sm">
                                     </div>
                                     <div class="h_modal_button d-flex">
-                                        <button type="button" class="btn btn_yellow_outline">Open</button>
-                                        <button type="button" class="btn btn_yellow_outline"><img
+                                        <button type="button" class="btn ">Open</button>
+                                        <button type="button" class="btn "><img
                                                 src="./assets/images/home/2users.svg" alt="">Assignee</button>
-                                        <button type="button" class="btn btn_yellow_outline"><img
+                                        <button type="button" class="btn "><img
                                                 src="./assets/images/home/Duedate.svg" alt="">Due date</button>
-                                        <button type="button" class="btn btn_yellow_outline"><img
+                                        <button type="button" class="btn "><img
                                                 src="./assets/images/home/priority.svg" alt="">Priority</button>
-                                        <button type="button" class="btn btn_yellow_outline"><img
+                                        <button type="button" class="btn "><img
                                                 src="./assets/images/home/tags.svg" alt="">Tags</button>
-                                        <button type="button" class="btn btn_yellow_outline"><img
+                                        <button type="button" class="btn "><img
                                                 src="./assets/images/menu_dot.png" alt=""></button>
                                     </div>
                                     <hr>
                                     <div class="h_modal_first d-flex">
                                         <div class="first_start">
 
-                                            <button type="button" class="btn btn_yellow_outline"> <img
+                                            <button type="button" class="btn"> <img
                                                     src="./assets/images/magic.svg" alt="">Templates</button>
 
                                         </div>
