--- a/home.html
+++ b/home.html
@@ -1138,9 +1138,9 @@
                                             </div>
                                             <span>Private</span>
                                         </div>
-                                        <div class="first_end  h_modal_button ">
+                                        <div class="first_end  ">
                                             <!-- Example split danger button -->
-                                            <button class="btn ">Create Doc</button>
+                                            <button class="btn action_button_modal ">Create Doc</button>
                                         </div>
                                     </div>
 
@@ -1173,9 +1173,9 @@
                                         </div>
                                     </div>
                                     <hr class="mt-5">
-                                    <div class="h_reminder_end d-flex  h_modal_button">
+                                    <div class="h_reminder_end d-flex  ">
                                         <img src="./assets/images/home/attached.svg" alt="">
-                                        <button class="btn">Create Reminder</button>
+                                        <button class="btn action_button_modal">Create Reminder</button>
                                     </div>
                                 </div>
                                 <div class="tab-pane fade" id="Chat" role="tabpanel" aria-labelledby="Chat-tab">
@@ -1209,11 +1209,11 @@
                                                     id="flexSwitchCheckChecked" checked>
                                                 <span>Private</span>
                                             </div>
-                                            <div class="h_chat_end d-flex  h_modal_button">
+                                            <div class="h_chat_end d-flex  ">
                                                 
                                                     <img src="./assets/images/home/not_clock.svg" alt="">
                                                
-                                                <button class="btn  create_end">Create Chat</button>
+                                                <button class="btn action_button_modal create_end">Create Chat</button>
                                             </div>
                                         </div>
                                     </div>
@@ -1245,9 +1245,9 @@
                                                     id="flexSwitchCheckChecked" checked>
                                                 <span>Private</span>
                                             </div>
-                                            <div class="h_whiteboard_end   h_modal_button">
+                                            <div class="h_whiteboard_end   ">
 
-                                                <button class="btn  whiteboard_end">Create
+                                                <button class="btn action_button_modal  whiteboard_end">Create
                                                     Whiteboard</button>
                                             </div>
                                         </div>
@@ -1280,9 +1280,9 @@
                                                     id="flexSwitchCheckChecked" checked>
                                                 <span>Private</span>
                                             </div>
-                                            <div class="h_whiteboard_end  h_modal_button">
+                                            <div class="h_whiteboard_end  ">
 
-                                                <button class="btn  dashboard_end">Create
+                                                <button class="btn  action_button_modal dashboard_end">Create
                                                     Dashboard</button>
                                             </div>
                                         </div>
@@ -1333,7 +1333,7 @@
                                         <div class="h_discount_two">
                                             <img src="./assets/images/home/discount.svg" alt="">
                                         </div>
-                                        <div class="d-flex h_business_title h_modal_button">
+                                        <div class="d-flex h_business_title h_modal_button_action">
                                             <h3>Business</h3>
                                             <button class="btn ">Popular</button>
                                         </div>
@@ -1350,7 +1350,7 @@
 
 
                                         </div>
-                                      <div class="h_modal_button">
+                                      <div class="h_modal_button_action">
                                         <button class="btn  h_discount_text col-12">Contact your
                                             admin</button>
                                         </div>
@@ -1431,7 +1431,7 @@
                     </div>
                 </div>
                 <div class="offcanvas-body">
-                    <div class="h_siderbar_button h_modal_button">
+                    <div class="h_siderbar_button h_modal_button_action">
                         <button class="btn ">Write StandUp</button>
                     </div>
                     <div class="h_sidebar_content mt-3 d-flex">
@@ -1486,13 +1486,13 @@
 
                             <div class="mt-3 h_sidebar1_button">
                                 <p>Format</p>
-                                <div class="h_sidebar_threeButton h_modal_button">
-                                    <button class="col-3  p-1 rounded-3">Bulleted list</button>
-                                    <button class="col-3  p-1 rounded-3">Short</button>
-                                    <button class="col-3  p-1 rounded-3">Traditional</button>
+                                <div class="h_sidebar_threeButton  h_modal_button">
+                                    <button class="col-3  btn p-1 rounded-3">Bulleted list</button>
+                                    <button class="col-3  btn p-1 rounded-3">Short</button>
+                                    <button class="col-3  btn p-1 rounded-3">Traditional</button>
                                 </div>
                             </div>
-                            <div class="h_modal_button">
+                            <div class=" h_modal_button_action">
                                 <button class="col-12 mt-3  p-2 rounded-3 h_generate">
                                     Generate
                                 </button>
@@ -1514,10 +1514,10 @@
                             <p>No updates in the last 24 hours.</p>
                             <div class="sibebar_footer_button d-flex">
                                 <div class="h_modal_button">
-                                    <button class=" p-2"><img src="./assets/images/add.svg"
+                                    <button class="btn p-2"><img src="./assets/images/add.svg"
                                             alt="Create">Create</button>
-                                    <button class=" p-2">Copy</button>
-                                    <button class=" p-2">Regenerate</button>
+                                    <button class="btn p-2">Copy</button>
+                                    <button class="btn p-2">Regenerate</button>
                                 </div>
                                 <div class="mx-4 sidebar_button">
                                     <span><img src="./assets/images/home/like.svg" alt="Like"></span>
@@ -1560,7 +1560,7 @@
                     </div>
                 </div>
                 <div class="offcanvas-body">
-                    <div class="notepad_content mt-4 h_modal_button">
+                    <div class="notepad_content mt-4 h_modal_button_action">
                         <img src="./assets/images/home/doc_add.svg" alt="">
                         <h4>Create personal notes</h4>
                         <p>Capture your thoughts or ideas and access them
@@ -1582,7 +1582,7 @@
                     <div class="profile_header ">
                         <h6 class="mt-2"> Arushi </h6>
 
-                        <button class="h_modal_outline_button ">Online</button>
+                        <button class="h_modal_outline_button btn">Online</button>
                     </div>
                     <button type="button" class="btn-close " data-bs-dismiss="offcanvas" aria-label="Close"></button>
 
