--- a/home.html
+++ b/home.html
@@ -255,13 +255,13 @@
                             <button class="nav_2_one my-2 mx-2">
                                 <img src="./assets/images/home.svg" alt="">
                                 <p>Home</p>
+                            </button>
                         </div>
-                        </button>
 
                     </div>
                 </div>
                 <div class="nav_2_two d-flex">
-                    <button class="btn fs-6 primary" type="button" class="btn primary" data-bs-toggle="modal"
+                    <button class="btn fs-6 primary" type="button" data-bs-toggle="modal"
                         data-bs-target="#exampleModal">Manage cards </button>
                     <button class="btn btn_white_button dropdown-toggle btn_setting" type="button"
                         id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -393,7 +393,7 @@
                                 <p class="mt-3">Lorem Ipsum</p>
                             </div>
                             <div class="content ">
-                                <p></p>All day</p>
+                                <p>All day</p>
                             </div>
                         </div>
                     </div>
@@ -2117,6 +2117,7 @@
 
 
             </div>
+        </div>
     </main>
 
 
