--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="./assets/css/home.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
@@ -297,7 +297,9 @@
             <a href="" class="nav-link"><span class="hide-text">Home</span></a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link"><span class="hide-text">Inbox</span></a>
+            <a href="inbox.html" class="nav-link"
+              ><span class="hide-text">Inbox</span></a
+            >
           </li>
           <li class="nav-item">
             <a href="" class="nav-link"><span class="hide-text">Docs</span></a>
