--- a/copy copy.html
+++ b/copy copy.html
@@ -2869,56 +2869,10 @@
                     </div>
                 </div>
 
+abubakar
 
-<style>
-    .serachSetting{
-        .Content_sidebar h3{
-            font-size: 16px;
-        }
-    }
-</style>
 
             </div>
-            <!-- Button trigger modal -->
-<div class="serachSetting">
-
-<button type="button" class="btn  h_modal_outline_button" data-bs-toggle="modal" data-bs-target="#exampleModal5">
-    Search Setting
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <div class="row">
-                <div class="col-sm-3 Content_sidebar d-flex">
-                    <div>
-                    <img src="/assets/images/home/setting.svg" width="12px" alt="">
-                </div>
-                    <h3 class="mx-2 mt-1">Search settings</h1>
-                </div>
-                <div class="col-sm-9">
-                  <h3>Column 2</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-                </div>
-
-              </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</div>
     </main>
 
 
